foolish/foolish-core/src/snapshots/foolish_core__approval_tests__seek_from_first_statement.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 yBG/78Ie61sRcsE11zNmH5g2DP+jiGLEjNi7r5SbaZ6/S89keeofxy1/oq4TfXM6KJJA8r8rxD6H5RL5dfzHAQ==
INPUT: {a = 1; b = #-1;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Index(offset=-1, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(1) [INDEPENDENT]
