foolish/foolish-core/src/snapshots/foolish_core__approval_tests__seek_in_nested_result_after_concatenation.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {OB1={a=1; message=2; only=1}; OB2={which_1 = #-1 + 1}; OB = OB1 OB2;}
[0] PARSED:
Brane [EMBRYONIC]
  OB1 = 
  Brane [EMBRYONIC]
    a = 
    Int(1) [INDEPENDENT]
    message = 
    Int(2) [INDEPENDENT]
    only = 
    Int(1) [INDEPENDENT]
  OB2 = 
  Brane [EMBRYONIC]
    whichˍ1 = 
    Operator(+) [EMBRYONIC]
      Index(offset=-1, FREE) [EMBRYONIC]
      Int(1) [INDEPENDENT]
  OB = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^OB1$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^OB2$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [NK]
  OB1 = 
  Brane [CONSTANT]
    a = 
    Int(1) [INDEPENDENT]
    message = 
    Int(2) [INDEPENDENT]
    only = 
    Int(1) [INDEPENDENT]
  OB2 = 
  Brane [NK]
    whichˍ1 = 
    Operator(+) [NK]
      ??? (constanic_clone called on NYE FIR) [NK]
      Int(1) [INDEPENDENT]
  OB = 
  Brane [CONSTANT]
    a = 
    Int(1) [INDEPENDENT]
    message = 
    Int(2) [INDEPENDENT]
    only = 
    Int(1) [INDEPENDENT]
