foolish/foolish-core/src/snapshots/foolish_core__approval_tests__sf_blocks_brane_at_assignment_time.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 6rh7cInmlj1hWbbu7f45/x58P5dS6TLrmRTwObzQdpH3SUaDnbzq9SOzOkDdbPqSjmI65pHYmJAMZRxm4K6dDw==
INPUT: {a={x=1, y=2}; s=<a>; a=99; s;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Brane [EMBRYONIC]
    x = 
    Int(1) [INDEPENDENT]
    y = 
    Int(2) [INDEPENDENT]
  s = 
  StayFoolish [EMBRYONIC]
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
  a = 
  Int(99) [INDEPENDENT]
  Search(pattern='^s$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
    y = 
    Int(2) [INDEPENDENT]
  s = 
  StayFoolish [CONSTANT]
    Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
      Int(99) [INDEPENDENT]
  a = 
  Int(99) [INDEPENDENT]
  Int(99) [INDEPENDENT]
