foolish/foolish-core/src/snapshots/foolish_core__approval_tests__sf_brane_blocking.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 VB0dkYDC2asKhtJ+i1Q3ctFvwu1RGeyOmDv7uYtSgYZj+D/gmGjxtM1Txy1itveZdav6K/x3UCvslQWnkRP6AA==
INPUT: {a={x=1}; b=<a>; a=42; d=<a>;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Brane [EMBRYONIC]
    x = 
    Int(1) [INDEPENDENT]
  b = 
  StayFoolish [EMBRYONIC]
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
  a = 
  Int(42) [INDEPENDENT]
  d = 
  StayFoolish [EMBRYONIC]
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
  b = 
  StayFoolish [CONSTANT]
    Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
      Int(42) [INDEPENDENT]
  a = 
  Int(42) [INDEPENDENT]
  d = 
  StayFoolish [CONSTANT]
    Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
      Int(42) [INDEPENDENT]
