foolish/foolish-core/src/snapshots/foolish_core__approval_tests__sf_of_sff.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {a = 1; b = 2; sff = <<a + b>>; sf = <sff>; a = 10; sf; sff;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  sff = 
  StayFullyFoolish [INDEPENDENT]
    Operator(+) [EMBRYONIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
  sf = 
  StayFoolish [EMBRYONIC]
    Search(pattern='^sff$', dir=BACKWARD, FREE) [EMBRYONIC]
  a = 
  Int(10) [INDEPENDENT]
  Search(pattern='^sf$', dir=BACKWARD, FREE) [EMBRYONIC]
  Search(pattern='^sff$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [WOCONSTANIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  sff = 
  StayFullyFoolish [INDEPENDENT]
    Operator(+) [EMBRYONIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
      Search(pattern='^b$', dir=BACKWARD, FREE) [CONSTANT]
  sf = 
  StayFoolish [CONSTANT]
    Search(pattern='^sff$', dir=BACKWARD, FREE) [CONSTANT]
      Int(12) [CONSTANT]
  a = 
  Int(10) [INDEPENDENT]
  Search(pattern='^sf$', dir=BACKWARD, FREE) [WOCONSTANIC]
    Search(pattern='^sff$', dir=BACKWARD, FREE) [WOCONSTANIC]
      Operator(+) [WOCONSTANIC]
        Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
        Search(pattern='^b$', dir=BACKWARD, FREE) [CONSTANT]
  Search(pattern='^sff$', dir=BACKWARD, FREE) [WOCONSTANIC]
    Operator(+) [WOCONSTANIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
      Search(pattern='^b$', dir=BACKWARD, FREE) [CONSTANT]
