foolish/foolish-core/src/snapshots/foolish_core__approval_tests__sff_basic.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 xRAtTWhkBbcL6yi1BsNG6ux2pE1NvhGGJ7WiQU+VGuBSb4YmcUVTND9Q4KIduIH89yB2QNTUnGCcFs9/iYG3BQ==
INPUT: {a=1,b=2; c=<<a+b>>; c; c;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  StayFullyFoolish [INDEPENDENT]
    Operator(+) [EMBRYONIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
  Search(pattern='^c$', dir=BACKWARD, FREE) [EMBRYONIC]
  Search(pattern='^c$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [WOCONSTANIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  StayFullyFoolish [INDEPENDENT]
    Operator(+) [EMBRYONIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
      Search(pattern='^b$', dir=BACKWARD, FREE) [CONSTANT]
  Int(3) [CONSTANT]
  Search(pattern='^c$', dir=BACKWARD, FREE) [WOCONSTANIC]
    Operator(+) [WOCONSTANIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
      Search(pattern='^b$', dir=BACKWARD, FREE) [CONSTANT]
