foolish/foolish-core/src/snapshots/foolish_core__approval_tests__sff_in_assignment_chain.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 5eXnE54k6I6F3K6egELM+FQpAIFXe22kup33yOSAOJ3IApGxjQrFhv7eOFC97rezbOMgaol/szjhlbIWh9lkCw==
INPUT: {a = 1; b = 2; c = <<a + b>>; a = 100; c;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  StayFullyFoolish [INDEPENDENT]
    Operator(+) [EMBRYONIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
  a = 
  Int(100) [INDEPENDENT]
  Search(pattern='^c$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  StayFullyFoolish [INDEPENDENT]
    Operator(+) [EMBRYONIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
      Search(pattern='^b$', dir=BACKWARD, FREE) [CONSTANT]
  a = 
  Int(100) [INDEPENDENT]
  Int(102) [CONSTANT]
